--- a/NuiOS/Base.lproj/Login.storyboard
+++ b/NuiOS/Base.lproj/Login.storyboard
@@ -32,7 +32,7 @@
                                 </connections>
                             </button>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQt-pU-MOq">
-                                <rect key="frame" x="37.5" y="236" width="300" height="235"/>
+                                <rect key="frame" x="37.5" y="186" width="300" height="235"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilC-RI-y8h" customClass="NuButton" customModule="NuiOS" customModuleProvider="target">
                                         <rect key="frame" x="5" y="180" width="290" height="45"/>
@@ -122,14 +122,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DOJ-u9-fil">
-                                <rect key="frame" x="112.5" y="86" width="150" height="150"/>
+                                <rect key="frame" x="137.5" y="86" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="Fvg-Bv-Q9s"/>
+                                    <constraint firstAttribute="width" constant="100" id="Fvg-Bv-Q9s"/>
                                     <constraint firstAttribute="width" secondItem="DOJ-u9-fil" secondAttribute="height" id="S9x-3H-INg"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oes-IA-LiQ">
-                                <rect key="frame" x="93.5" y="471" width="187" height="30"/>
+                                <rect key="frame" x="93.5" y="421" width="187" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="qzA-ku-hrO"/>
                                 </constraints>
@@ -140,15 +140,63 @@
                                     <segue destination="ATO-XE-rVU" kind="presentation" id="EMF-ck-g6Y"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mig-N6-llE">
+                                <rect key="frame" x="142.5" y="471" width="90" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shV-N2-L91">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                        <color key="backgroundColor" red="0.75686274509999996" green="0.1529411765" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="shV-N2-L91" secondAttribute="height" id="B81-No-aJP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <state key="normal" title="G">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
+                                                <integer key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="googleLoginBtnAction:" destination="i6o-GW-h1X" eventType="touchUpInside" id="jxG-0C-0pf"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1mh-9H-Mjm">
+                                        <rect key="frame" x="50" y="0.0" width="40" height="40"/>
+                                        <color key="backgroundColor" red="0.015686274510000001" green="0.14117647059999999" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="1mh-9H-Mjm" secondAttribute="height" id="7LQ-8k-PjB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <state key="normal" title="F">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
+                                                <integer key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="facebookLoginBtnAction:" destination="i6o-GW-h1X" eventType="touchUpInside" id="Iy5-os-cWH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="znF-9e-sGq"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="mig-N6-llE" firstAttribute="centerX" secondItem="lQt-pU-MOq" secondAttribute="centerX" id="1gm-eN-BzZ"/>
                             <constraint firstItem="DhC-Tq-Vvd" firstAttribute="bottom" secondItem="IKR-qU-i4m" secondAttribute="bottom" constant="20" id="7Gd-ed-ToD"/>
                             <constraint firstItem="lQt-pU-MOq" firstAttribute="top" secondItem="DOJ-u9-fil" secondAttribute="bottom" id="9Jh-7H-lJO"/>
                             <constraint firstItem="DOJ-u9-fil" firstAttribute="centerX" secondItem="lQt-pU-MOq" secondAttribute="centerX" id="B0Z-Jt-HS7"/>
+                            <constraint firstItem="mig-N6-llE" firstAttribute="top" secondItem="oes-IA-LiQ" secondAttribute="bottom" constant="20" id="WUS-Mw-9Lk"/>
                             <constraint firstItem="IKR-qU-i4m" firstAttribute="top" secondItem="2rE-zV-Ocb" secondAttribute="bottom" id="dNI-XJ-6Zv"/>
                             <constraint firstItem="2rE-zV-Ocb" firstAttribute="centerX" secondItem="DhC-Tq-Vvd" secondAttribute="centerX" id="g6w-aK-5t8"/>
-                            <constraint firstItem="lQt-pU-MOq" firstAttribute="centerY" secondItem="DhC-Tq-Vvd" secondAttribute="centerY" constant="10" id="hQ8-un-ZWy"/>
+                            <constraint firstItem="lQt-pU-MOq" firstAttribute="centerY" secondItem="DhC-Tq-Vvd" secondAttribute="centerY" constant="-40" id="hQ8-un-ZWy"/>
                             <constraint firstItem="IKR-qU-i4m" firstAttribute="centerX" secondItem="DhC-Tq-Vvd" secondAttribute="centerX" id="pBb-4q-rCY"/>
                             <constraint firstItem="oes-IA-LiQ" firstAttribute="centerX" secondItem="lQt-pU-MOq" secondAttribute="centerX" id="uku-LK-UMd"/>
                             <constraint firstItem="lQt-pU-MOq" firstAttribute="centerX" secondItem="DhC-Tq-Vvd" secondAttribute="centerX" id="umQ-OY-fmD"/>
@@ -201,7 +249,7 @@
                 <viewControllerPlaceholder storyboardName="SignUp" referencedIdentifier="AlternativeAccountActivation" id="kRs-xZ-fOl" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NE0-EF-svz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="673" y="-8"/>
+            <point key="canvasLocation" x="707" y="30"/>
         </scene>
     </scenes>
 </document>
