Adding things of google sign in

--- a/NuiOS/Base.lproj/AccountRecover.storyboard
+++ b/NuiOS/Base.lproj/AccountRecover.storyboard
@@ -707,6 +707,6 @@
         <image name="see-password-selected" width="34" height="34"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fJW-Wl-Wwr"/>
+        <segue reference="Lkp-S7-KdM"/>
     </inferredMetricsTieBreakers>
 </document>
