--- a/NuiOS/Base.lproj/Profile.storyboard
+++ b/NuiOS/Base.lproj/Profile.storyboard
@@ -194,6 +194,9 @@
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OwE-p8-4qm">
                                                     <rect key="frame" x="310" y="19" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="socialnetworksSwitchDidChange:" destination="npr-BO-WaH" eventType="valueChanged" id="xJa-ce-whT"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                             <constraints>
