--- a/NuiOS/Base.lproj/ExtendedLaunchScreen.storyboard
+++ b/NuiOS/Base.lproj/ExtendedLaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QBV-QO-3MN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QBV-QO-3MN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,8 +34,8 @@
                         <viewLayoutGuide key="safeArea" id="yLd-Zu-psi"/>
                     </view>
                     <connections>
-                        <segue destination="bXv-GB-YjG" kind="presentation" identifier="loginSilently" modalTransitionStyle="crossDissolve" id="QT2-Pr-t2H"/>
-                        <segue destination="102-JA-Uk8" kind="presentation" identifier="login" modalTransitionStyle="crossDissolve" id="8Ky-cc-94B"/>
+                        <segue destination="bXv-GB-YjG" kind="presentation" identifier="loginSilently" customClass="BecomeRootSegue" customModule="NuiOS" customModuleProvider="target" modalTransitionStyle="crossDissolve" id="QT2-Pr-t2H"/>
+                        <segue destination="102-JA-Uk8" kind="presentation" identifier="login" customClass="BecomeRootSegue" customModule="NuiOS" customModuleProvider="target" modalTransitionStyle="crossDissolve" id="8Ky-cc-94B"/>
                         <segue destination="6P0-bc-tnT" kind="presentation" identifier="accountActivation" modalTransitionStyle="crossDissolve" id="0lP-gT-hTA"/>
                     </connections>
                 </viewController>
